--- a/.classpath
+++ b/.classpath
@@ -2,7 +2,7 @@
 <classpath>
 	<classpathentry excluding="api/Xpath_Css_Locator.java" kind="src" path="webdriver"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
-	<classpathentry kind="lib" path="libraries/selenium-server-standalone-2.53.1.jar"/>
+	<classpathentry kind="lib" path="libraries/selenium-server-standalone-2.53.1.jar" sourcepath=""/>
 	<classpathentry kind="lib" path="libraries/selenium-java-2.53.1-srcs.jar"/>
 	<classpathentry kind="lib" path="BrowserDriver/chromedriver.exe"/>
 	<classpathentry kind="output" path="bin"/>
